# mypy

./: CMakeLists.txt  README.md
examples/: arrays.pyrust  comprehensive.pyrust  control_flow.pyrust  enum.pyrust  factorial.pyrust  hello.pyrust  scope_and_tuples.pyrust  strings.pyrust  structs.pyrust  types_and_casts.pyrust
inc/: ast.hpp  lexer.hpp  parser.hpp  semantic.hpp  stmantic.hpp  tokens.hpp
specs/: codegen.md  grammar.md  semantics.md  types.md
src/: CMakeLists.txt  ast.cppm  interpreter.cppm  lexer.cpp  lexer.cppm  main.cpp  parser.cpp  parser.cppm  semantic.cpp  semantic.cppm  test_lexer.cpp  test_parser.cpp  test_semantic.cpp  tokens.cpp  tokens.cppm
